# sentirise

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ADR.md
scripts/: check_dataset.py  debug_output.py  eval_20.py  eval_mlflow.py  test_api_e2e.py  test_classifier.py
src/sentirise/: __init__.py  api.py  classifier.py  cli.py  config.py  dataset.py  train.py
tests/: conftest.py  test_api.py  test_classifier.py  test_config.py  test_dataset.py  test_e2e.py
ui/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
